--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@coinbase/onchainkit": "^0.38.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "ethers": "^6.13.5",
     "next": "^15.2.3",
     "postcss": "^8.5.3",
